--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -277,3 +277,12 @@ body {
         width: 28px;
     }
 }
+.loading-state{
+        margin-bottom: 60px;
+
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 1.3;
+    color: var(--title-1);
+    text-align: center;
+}
