--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
-@import './reset.css';
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap');
+@import "./reset.css";
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap");
 
 :root {
     /* Colors */
@@ -49,7 +49,7 @@ html,
 body {
     min-height: 100vh;
 
-    font-family: 'DM Sans', sans-serif;
+    font-family: "DM Sans", sans-serif;
     letter-spacing: -0.5px;
 
     /* Light mode */
@@ -101,7 +101,6 @@ body {
 
 /* Dark mode btn */
 
-
 /* Btn */
 
 .btn {
@@ -137,7 +136,6 @@ body {
     column-gap: 30px;
     row-gap: 30px;
 }
-
 
 /* Project details */
 
@@ -277,8 +275,8 @@ body {
         width: 28px;
     }
 }
-.loading-state{
-        margin-bottom: 60px;
+.loading-state {
+    margin-bottom: 60px;
 
     font-size: 60px;
     font-weight: 700;
